[package]
name = "pipe"
version = "0.1.0"
authors = ["Spxg <itsme@unsafe.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1"
yew = "0.17"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
dotenv_codegen = "0.15.0"

[dependencies.yew-router]
version = "0.14"
features = ["web_sys"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.status-protoc]
version = "0.1"
path = "../status-protoc"

[dependencies.web2core]
version = "0.1"
path = "../web2core"